--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
      
 <header>
     <div class="logo">
-      <img src="/Users/manuelkotecki/news/imgs/logo.jpg" width="50" alt="Logo">
+      <img src="/imgs/logo.jpg" width="50" alt="Logo">
     </div>
     <div class="NewsRoman">
       <h1>News Roman™</h1>
@@ -57,7 +57,7 @@
                 and will provide a conclusion to the story of Jesse Pinkman
                 and his quest for freedom.</p>
             <div class="poster1">
-                <img src="/Users/manuelkotecki/news/imgs/1.jpg" width="500" height="300" alt="El Camino 2 Poster" style="clip: rect(50px 20px 15px 50px);">
+                <img src="/imgs/1.jpg" width="500" height="300" alt="El Camino 2 Poster" style="clip: rect(50px 20px 15px 50px);">
             </div>
             </div>
    
@@ -79,7 +79,7 @@
                 The sequel promises to provide closure to the story and to bring the saga of "Breaking Bad" to a definitive end.
             </p>
             <div class="Poster2">
-                <img src="/Users/manuelkotecki/news/imgs/2.png" width="300px" alt="El Camino 2 Poster2">
+                <img src="/imgs/2.png" width="300px" alt="El Camino 2 Poster2">
           
             <p>
                 Despite the removal of the first film from Netflix, fans can still watch "El Camino" before it's too late.
@@ -112,13 +112,13 @@
       <footer>
         <div class="ads-container">
           <div class="ad">
-            <a href="https://www.mediaexpert.pl"><img src="/Users/manuelkotecki/news/imgs/ad1.jpeg"alt="Ad 1">
+            <a href="https://www.mediaexpert.pl"><img src="/imgs/ad1.jpeg"alt="Ad 1">
           </div>
           <div class="ad">
-            <a href="https://www.mediaexpert.pl"><img src="/Users/manuelkotecki/news/imgs/ad2.jpg" alt="Ad 2">
+            <a href="https://www.mediaexpert.pl"><img src="/imgs/ad2.jpg" alt="Ad 2">
           </div>
           <div class="ad">
-            <a href="https://www.mediaexpert.pl"><img src="/Users/manuelkotecki/news/imgs/ad3.jpg" alt="Ad 3">
+            <a href="https://www.mediaexpert.pl"><img src="/imgs/ad3.jpg" alt="Ad 3">
           </div>
         </div>
       </footer>
