--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 The sequel promises to provide closure to the story and to bring the saga of "Breaking Bad" to a definitive end.
             </p>
             <div class="Poster2">
-                <img src="/imgs/2.png" width="300px" alt="El Camino 2 Poster2">
+                <img src="imgs/2.png" width="300px" alt="El Camino 2 Poster2">
           
             <p>
                 Despite the removal of the first film from Netflix, fans can still watch "El Camino" before it's too late.
