--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
      
 <header>
     <div class="logo">
-      <img src="/Users/manuelkotecki/news/imgs/logo.jpg" width="50" alt="Logo">
+      <img src="imgs/logo.jpg" width="50" alt="Logo">
     </div>
     <div class="NewsRoman">
       <h1>News Roman™</h1>
@@ -56,7 +56,7 @@
         <h4>24 feb. 2023 8:16h.</h4>
         <hr>
               <div class="poster1">
-                <img src="/Users/manuelkotecki/news/imgs/1.jpg" width="500" height="300" alt="El Camino 2 Poster" style="clip: rect(50px 20px 15px 50px);">
+                <img src="imgs/1.jpg" width="500" height="300" alt="El Camino 2 Poster" style="clip: rect(50px 20px 15px 50px);">
         
         <article>
             <p><a href="https://www.netflix.com/">Netflix</a> is set to release "El Camino 2," the highly-anticipated 
@@ -119,13 +119,13 @@
       <h7>
         <div class="ads-container">
           <div class="ad">
-            <a href="https://www.mediaexpert.pl"><img src="/Users/manuelkotecki/news/imgs/ad1.jpeg"alt="Ad 1">
+            <a href="https://www.mediaexpert.pl"><img src="imgs/ad1.jpeg"alt="Ad 1">
           </div>
           <div class="ad">
-            <a href="https://www.mediaexpert.pl"><img src="/Users/manuelkotecki/news/imgs/ad2.jpg" alt="Ad 2">
+            <a href="https://www.mediaexpert.pl"><img src="imgs/ad2.jpg" alt="Ad 2">
           </div>
           <div class="ad">
-            <a href="https://www.mediaexpert.pl"><img src="/Users/manuelkotecki/news/imgs/ad3.jpg" alt="Ad 3">
+            <a href="https://www.mediaexpert.pl"><img src="imgs/ad3.jpg" alt="Ad 3">
           </div>
         </div>
     </h7>
